--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,27 @@
 services:
+  api_gateway:
+    build:
+      context: ./api_gateway
+    container_name: api_gateway
+    env_file:
+      - .env
+    environment:
+      - PRODUCT_SERVICE_URL=http://product:3001
+      - USER_SERVICE_URL=http://user:3002
+      - ORDER_SERVICE_URL=http://order:3003
+    ports:
+      - "3000:3000"
+    depends_on:
+      - product_service
+      - user_service
+      - order_service
+
   product_service:
     build:
       context: ./product_service
     container_name: product
     ports:
-      - "3001:3001"
+      - "3001"
 
   user_service:
     build:
@@ -13,7 +30,7 @@ services:
     env_file:
       - .env
     ports:
-      - "3002:3002"
+      - "3002"
 
   order_service:
     build:
@@ -23,7 +40,7 @@ services:
       - PRODUCT_SERVICE_URL=http://product:3001
       - USER_SERVICE_URL=http://user:3002
     ports:
-      - "3003:3003"
+      - "3003"
     depends_on:
       - product_service
       - user_service
