--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
       - PRODUCT_SERVICE_URL=http://product:3001
       - USER_SERVICE_URL=http://user:3002
       - ORDER_SERVICE_URL=http://order:3003
+      - REDIS_URL=redis://redis:6379
     ports:
       - "3000:3000"
     depends_on:
       - product_service
       - user_service
       - order_service
+      - redis
 
   product_service:
     build:
@@ -44,3 +46,9 @@ services:
     depends_on:
       - product_service
       - user_service
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
