--- a/api_gateway/Dockerfile
+++ b/api_gateway/Dockerfile
@@ -14,4 +14,4 @@ COPY app/ ./app
 
 EXPOSE 3000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3000", "--ssl-keyfile", "./certs/key.pem", "--ssl-certfile", "./certs/cert.pem"]
