--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
       - ORDER_SERVICE_URL=http://order:3003
       - REDIS_URL=redis://redis:6379
     ports:
-      - "3000:3000"
+      - "443:3000"
+    volumes:
+      - ./certs:/code/certs
     depends_on:
       - product_service
       - user_service
